--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -82,9 +82,10 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="LeftAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="RightAttack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="LeftHeavyAttack",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="RightHeavyAttack",bShift=True,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Dodge",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="LeftHeavyAttack",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="RightHeavyAttack",bShift=False,bCtrl=True,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="Forwards",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Sideways",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Forwards",Scale=-1.000000,Key=S)
