--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,4 +3,5 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Jamie_TestZone.Jamie_TestZone
 GameInstanceClass=/Game/BP_CustomGameInstance.BP_CustomGameInstance_C
+GameDefaultMap=/Game/Rooms/MainMenuMap.MainMenuMap
 
